--- a/rapidvg/platform/msvc2008/projects/test.vcproj
+++ b/rapidvg/platform/msvc2008/projects/test.vcproj
@@ -41,7 +41,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="..\..\..\src\rapidvg;&quot;..\..\..\..\editor-external\freeglut\include&quot;;&quot;..\..\..\..\editor-external\gl\include&quot;;&quot;..\..\..\..\editor-external\c99&quot;"
+				AdditionalIncludeDirectories="..\..\..\src\rapidvg;..\..\..\..\editor-external\freeglut\include;..\..\..\..\editor-external\gl\include;..\..\..\..\editor-external\c99"
 				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE;FREEGLUT_STATIC;GLEW_STATIC"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
@@ -67,7 +67,7 @@
 				AdditionalDependencies="glew32sd.lib"
 				OutputFile="..\test\x86\Debug\test.exe"
 				LinkIncremental="2"
-				AdditionalLibraryDirectories="&quot;..\..\..\..\editor-external\freeglut\lib&quot;;&quot;..\..\..\..\editor-external\intel&quot;;&quot;..\..\..\..\editor-external\gl\lib&quot;"
+				AdditionalLibraryDirectories="..\..\..\..\editor-external\freeglut\lib;..\..\..\..\editor-external\intel;..\..\..\..\editor-external\gl\lib"
 				IgnoreDefaultLibraryNames=""
 				GenerateDebugInformation="true"
 				ProgramDatabaseFile="..\test\x86\Debug\test.pdb"
@@ -123,7 +123,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="2"
 				EnableIntrinsicFunctions="true"
-				AdditionalIncludeDirectories="..\..\..\src\rapidvg;&quot;..\..\..\..\editor-external\freeglut\include&quot;;&quot;..\..\..\..\editor-external\gl\include&quot;;&quot;..\..\..\..\editor-external\c99&quot;"
+				AdditionalIncludeDirectories="..\..\..\src\rapidvg;..\..\..\..\editor-external\freeglut\include;..\..\..\..\editor-external\gl\include;..\..\..\..\editor-external\c99"
 				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE;FREEGLUT_STATIC;GLEW_STATIC"
 				RuntimeLibrary="2"
 				EnableFunctionLevelLinking="true"
@@ -147,7 +147,7 @@
 				AdditionalDependencies="glew32s.lib"
 				OutputFile="..\test\x86\Debug\test.exe"
 				LinkIncremental="1"
-				AdditionalLibraryDirectories="&quot;..\..\..\..\editor-external\freeglut\lib&quot;;&quot;..\..\..\..\editor-external\intel&quot;;&quot;..\..\..\..\editor-external\gl\lib&quot;"
+				AdditionalLibraryDirectories="..\..\..\..\editor-external\freeglut\lib;..\..\..\..\editor-external\intel;..\..\..\..\editor-external\gl\lib"
 				GenerateDebugInformation="true"
 				ProgramDatabaseFile="..\test\x86\Debug\test.pdb"
 				SubSystem="1"
