--- a/easygui/platform/msvc2008/projects/libeasygui.vcproj
+++ b/easygui/platform/msvc2008/projects/libeasygui.vcproj
@@ -41,7 +41,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="..\..\..\src;..\..\..\..\easy2d\src;&quot;..\..\..\..\editor-external\wx\include&quot;"
+				AdditionalIncludeDirectories="..\..\..\src;..\..\..\..\easy2d\src;..\..\..\..\editor-external\wx\include"
 				PreprocessorDefinitions="WIN32;_DEBUG;_LIB;_CRT_SECURE_NO_WARNINGS;GLEW_STATIC;EGUI_WX"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
@@ -105,7 +105,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="2"
 				EnableIntrinsicFunctions="true"
-				AdditionalIncludeDirectories="..\..\..\src;..\..\..\..\easy2d\src;&quot;..\..\..\..\editor-external\wx\include&quot;"
+				AdditionalIncludeDirectories="..\..\..\src;..\..\..\..\easy2d\src;..\..\..\..\editor-external\wx\include"
 				PreprocessorDefinitions="WIN32;NDEBUG;_LIB;_CRT_SECURE_NO_WARNINGS;GLEW_STATIC;EGUI_WX"
 				RuntimeLibrary="2"
 				EnableFunctionLevelLinking="true"
