--- a/easywidget/platform/msvc2008/projects/libeasywidget.vcproj
+++ b/easywidget/platform/msvc2008/projects/libeasywidget.vcproj
@@ -41,7 +41,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="..\..\..\src;..\..\..\..\easy2d\src;..\..\..\..\easygui\src;&quot;..\..\..\..\editor-external\gl\include&quot;"
+				AdditionalIncludeDirectories="..\..\..\src;..\..\..\..\easy2d\src;..\..\..\..\easygui\src;..\..\..\..\editor-external\gl\include"
 				PreprocessorDefinitions="WIN32;_DEBUG;_LIB;_CRT_SECURE_NO_WARNINGS;GLEW_STATIC;EGUI_WX"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
@@ -105,7 +105,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="2"
 				EnableIntrinsicFunctions="true"
-				AdditionalIncludeDirectories="..\..\..\src;..\..\..\..\easy2d\src;..\..\..\..\easygui\src;&quot;..\..\..\..\editor-external\gl\include&quot;"
+				AdditionalIncludeDirectories="..\..\..\src;..\..\..\..\easy2d\src;..\..\..\..\easygui\src;..\..\..\..\editor-external\gl\include"
 				PreprocessorDefinitions="WIN32;NDEBUG;_LIB;_CRT_SECURE_NO_WARNINGS;GLEW_STATIC;EGUI_WX"
 				RuntimeLibrary="2"
 				EnableFunctionLevelLinking="true"
