--- a/ejoy2d/platform/msvc2008/projects/ejoy2d.vcproj
+++ b/ejoy2d/platform/msvc2008/projects/ejoy2d.vcproj
@@ -214,6 +214,10 @@
 			>
 		</File>
 		<File
+			RelativePath="..\..\..\src\spritepack.c"
+			>
+		</File>
+		<File
 			RelativePath="..\..\..\src\spritepack.h"
 			>
 		</File>
