[ADDED] toolbar icon
Former-commit-id: 235a3728d706f116f4fedf00a8b1ce418cfb199e

--- a/lr/res/rc/lr.rc
+++ b/lr/res/rc/lr.rc
@@ -8,3 +8,4 @@ BMP_PATH		BITMAP	"..\\frame\\icon\\path.bmp"
 BMP_AREA		BITMAP	"..\\frame\\icon\\area.bmp"
 BMP_CAREA		BITMAP	"..\\frame\\icon\\carea.bmp"
 BMP_CAMERA		BITMAP	"..\\frame\\icon\\camera.bmp"
+BMP_LEVEL		BITMAP	"..\\frame\\icon\\level.bmp"
