--- a/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
+++ b/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
@@ -876,6 +876,14 @@
 					RelativePath="..\..\..\src\drag2d\dataset\LayerMgr.h"
 					>
 				</File>
+				<File
+					RelativePath="..\..\..\src\drag2d\dataset\SceneNode.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\drag2d\dataset\SceneNode.h"
+					>
+				</File>
 			</Filter>
 			<Filter
 				Name="shape"
