[ADDED] modify layer's visible & editable
Former-commit-id: 4b86c26233cea279c65d54e88b51e48a9254196b

--- a/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
+++ b/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
@@ -2589,6 +2589,14 @@
 				Name="layer"
 				>
 				<File
+					RelativePath="..\..\..\src\drag2d\view\LayerDialog.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\drag2d\view\LayerDialog.h"
+					>
+				</File>
+				<File
 					RelativePath="..\..\..\src\drag2d\view\LayerList.cpp"
 					>
 				</File>
