[CHANGED] move state date to property panel
Former-commit-id: 333e6af40fa0ba371a6f42b31577ce6a15a94fa3

--- a/easyparticle3d/platform/msvc2008/projects/libparticle3d.vcproj
+++ b/easyparticle3d/platform/msvc2008/projects/libparticle3d.vcproj
@@ -305,11 +305,19 @@
 				Name="property"
 				>
 				<File
-					RelativePath="..\..\..\src\libparticle3d\PropertySetting.cpp"
+					RelativePath="..\..\..\src\libparticle3d\SpritePropertySetting.cpp"
 					>
 				</File>
 				<File
-					RelativePath="..\..\..\src\libparticle3d\PropertySetting.h"
+					RelativePath="..\..\..\src\libparticle3d\SpritePropertySetting.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\libparticle3d\SymbolPropertySetting.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\libparticle3d\SymbolPropertySetting.h"
 					>
 				</File>
 			</Filter>
