[FIXED] p3d property setting panel
Former-commit-id: 865c3d1d6c042d513ee72c6c9693f5f162cd082c

--- a/easyparticle3d/platform/msvc2008/projects/libparticle3d.vcproj
+++ b/easyparticle3d/platform/msvc2008/projects/libparticle3d.vcproj
@@ -305,6 +305,14 @@
 				Name="property"
 				>
 				<File
+					RelativePath="..\..\..\src\libparticle3d\PropertySettingPanel.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\libparticle3d\PropertySettingPanel.h"
+					>
+				</File>
+				<File
 					RelativePath="..\..\..\src\libparticle3d\SpritePropertySetting.cpp"
 					>
 				</File>
