[ADDED] draw triangles from rvg, PrimitiveDrawRVG
Former-commit-id: 1071b16abef8a8d28d87533675d7ec532cab37c9

--- a/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
+++ b/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
@@ -1229,6 +1229,10 @@
 				Name="shape"
 				>
 				<File
+					RelativePath="..\..\..\src\drag2d\render\DrawSelectedShapeVisitor.cpp"
+					>
+				</File>
+				<File
 					RelativePath="..\..\..\src\drag2d\render\DrawSelectedShapeVisitor.h"
 					>
 				</File>
@@ -1254,6 +1258,14 @@
 				</File>
 				<File
 					RelativePath="..\..\..\src\drag2d\render\PrimitiveDrawNew.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\drag2d\render\PrimitiveDrawRVG.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\drag2d\render\PrimitiveDrawRVG.h"
 					>
 				</File>
 				<File
