[ADDED] lr viewlist's dclick
Former-commit-id: 02fce11c5e098dac1c5db98d82586bdb41924001

--- a/lr/platform/msvc2008/projects/lr.vcproj
+++ b/lr/platform/msvc2008/projects/lr.vcproj
@@ -357,6 +357,30 @@
 					>
 				</File>
 			</Filter>
+			<Filter
+				Name="viewlist"
+				>
+				<File
+					RelativePath="..\..\..\src\lr\view\ViewlistListImpl.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\lr\view\ViewlistListImpl.h"
+					>
+				</File>
+			</Filter>
+			<Filter
+				Name="utility"
+				>
+				<File
+					RelativePath="..\..\..\src\lr\view\OpenSymbolDialog.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\lr\view\OpenSymbolDialog.h"
+					>
+				</File>
+			</Filter>
 		</Filter>
 		<Filter
 			Name="dataset"
