[ADDED] pack spr_id file
Former-commit-id: face85b570a4f8ee94900da15b5ee0e13ff47886

--- a/easyrespacker/platform/msvc2008/projects/librespacker.vcproj
+++ b/easyrespacker/platform/msvc2008/projects/librespacker.vcproj
@@ -313,6 +313,10 @@
 			Name="nodes"
 			>
 			<File
+				RelativePath="..\..\..\src\librespacker\IPackNode.cpp"
+				>
+			</File>
+			<File
 				RelativePath="..\..\..\src\librespacker\IPackNode.h"
 				>
 			</File>
