[ADDED] pack pkg mgr
Former-commit-id: 6b8e5b7faacaa8431516ded5d022c105d676f878

--- a/easyrespacker/platform/msvc2008/projects/librespacker.vcproj
+++ b/easyrespacker/platform/msvc2008/projects/librespacker.vcproj
@@ -800,6 +800,18 @@
 					</File>
 				</Filter>
 			</Filter>
+			<Filter
+				Name="pkg"
+				>
+				<File
+					RelativePath="..\..\..\src\librespacker\PackPkgMgr.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\librespacker\PackPkgMgr.h"
+					>
+				</File>
+			</Filter>
 		</Filter>
 		<Filter
 			Name="unpack"
